# comprime

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
